# gcore-mcp-server

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
gcore_mcp_server/: __init__.py  server.py
gcore_mcp_server/config/: __init__.py  settings.py  toolsets.py
gcore_mcp_server/core/: __init__.py  inspection.py  schema.py
gcore_mcp_server/domain/: __init__.py  gcore_domain.py
tests/: __init__.py  conftest.py  test_e2e_smoke.py  test_inspection.py  test_pattern_filtering.py  test_schema.py
