[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcore-mcp-server"
version = "0.1.0"
description = "MCP server for Gcore API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Algis Dumbris", email = "algis.dumbris@gcore.com" },
]
license = { text = "MIT" }
dependencies = [
    "gcore>=0.5, <1",
    "fastmcp~=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-anyio>=0.0.0",
]

[project.scripts]
gcore-mcp-server = "gcore_mcp_server.server:main"

[tool.hatch.packages.find]
include = ["gcore_mcp_server*"]
namespaces = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["gcore_mcp_server"]
typeCheckingMode = "strict"
reportMissingImports = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pyright>=1.1.397",
    "pytest>=8.3.5",
    "pytest-anyio>=0.0.0",
    "pytest-timeout>=2.4.0",
]
